# android-cmake-project

./: CMakeLists.txt  README.md  README_zh-CN.md  android.toolchain.cmake  env_android.cmake
CMakeModule/: android.env.cmake  android.flag.cmake  android.func.cmake  android.module.cmake  android.toolchain.cmake  exe32.cmake  exe64.cmake
CMakeModule/AndroidBP/: Parse.cmake  ParseOther.cmake  rm_comment
CMakeModule/AndroidBP/rmComment/: CMakeLists.txt  main.cpp
CMakeModule/AndroidMK/: LoadModule.cmake  Parse.cmake  ParseIf.cmake  ParseValues.cmake  addTarget.cmake
CMakeModule/AndroidMK/test/: Android.mk  common.h  test.cpp
CMakeModule/arm/: armv7-a-neon.cmake  armv7-a.cmake
CMakeModule/arm64/: armv8-2a.cmake  armv8-a.cmake
Cmake/: SurfaceFlinger.cmake  android.toolchain.cmake  audiopolicy.cmake  default.cmake  fs_mgr.cmake  init.cmake  libaudiopolicycomponents.cmake  libcutils.cmake  libui.cmake  libutil.cmake  rockchip_audio.cmake  rockchip_drmservice.cmake
Cmake/AndroidBP/: Parse.cmake  ParseOther.cmake
Cmake/AndroidBP/rmComment/: Android.bp  CMakeLists.txt  main.cpp
Cmake/AndroidMK/: LoadMoudle.cmake  Parse.cmake  ParseIf.cmake  ParseValues.cmake  addTarget.cmake
Cmake/AndroidMK/dep/: Android.mk  help_suffix.cpp  test.cpp
Cmake/AndroidMK/test/: Android.mk  test.h
Cmake/old/: SurfaceFlinger.cmake  audio_policy_legacy_default.cmake  fec.cmake  init.cmake  libaudiopolicyenginedefault.cmake  libaudiopolicymanager.cmake  libbinder.cmake  libgui.cmake  libutil.cmake  recovery.cmake
android-test/: CMakeLists.txt
